--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -453,6 +453,25 @@ header {
 }
 
 /* ----------------------------- */
+/* Outlet */
+/* ----------------------------- */
+
+.section-outlet {
+    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0, 0, 0, 0.78)),to(rgba(0, 0, 0, 0.78))),url(img/outlet.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.78),rgba(0, 0, 0, 0.78)),url(img/outlet.jpg);
+    background-size: cover;
+    color: #fff;
+    background-attachment: fixed;
+}
+
+.section-outlet .row p {
+  padding: 80px inherit;
+  width: 75%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+/* ----------------------------- */
 /* Testimonials */
 /* ----------------------------- */
 
