--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -465,7 +465,7 @@ header {
 }
 
 .section-outlet .row p {
-  padding: 80px inherit;
+  padding: 80px 0;
   width: 75%;
   margin: 0 auto;
   text-align: center;
