--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -216,13 +216,17 @@ input[type=submit]:active{
 /* Header */
 /* ----------------------------- */
 
-header {
+header, .header-page {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/hero.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
     background-attachment: fixed;
+}
+
+.header-page {
+  height: 50vh;
 }
 
 .hero-text-box {
@@ -232,6 +236,16 @@ header {
     left: 50%;
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
+}
+
+.hero-text-box-page {
+  position: absolute;
+  width: 1140px;
+  top: 30%;
+  left: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+  text-align: center;
 }
 
 .logo,
