--- a/Resources/css/queries.css
+++ b/Resources/css/queries.css
@@ -4,11 +4,11 @@
 /* ----------------------------- */
 
 @media only screen and (max-width: 1200px) {
-    .hero-text-box {
+    .hero-text-box, .hero-text-box-page {
         width: 100%;
         padding: 0 2%;
     }
-    
+
     .row { padding: 0 2%; }
 }
 
@@ -29,16 +29,16 @@
     .steps-box:last-child { margin-top: 10px; }
     .works-step { margin-bottom: 40px; }
     .works-step:last-of-type { margin-bottom: 60px; }
-    
+
     .app-screen { width: 50%; }
-    
-    .icon-small { 
+
+    .icon-small {
         width: 17px;
-        margin-right: 5px; 
+        margin-right: 5px;
     }
-    
+
     .city-feature { font-size: 90%; }
-    
+
     .plan-box {
         width: 100%;
         margin-left: 0;
@@ -46,9 +46,9 @@
     .plan-price {
         font-size: 250%;
     }
-    
+
     .contact-form { width: 80%; }
-    
+
     footer {
         padding-left: 20px;
         padding-right: 20px;
@@ -62,55 +62,55 @@
 @media only screen and (max-width: 767px) {
     body { font-size: 16px; }
     section { padding: 30px 0; }
-    
+
     .row,
     .hero-text-box { padding: 0 4%; }
-    
+
     .col { width: 100%; }
-    
+
     .main-nav { display: none; }
     .mobile-nav-icon {
         display: inline-block;
     }
-    .main-nav { 
-        float: left; 
+    .main-nav {
+        float: left;
         margin-top: 35px;
         margin-left: 25px;
     }
     .main-nav li { display: block; }
     .main-nav li a:link,
-    .main-nav li a:visited { 
-        display: block; 
+    .main-nav li a:visited {
+        display: block;
         border: 0;
         padding: 10px 0;
         font-size: 100%;
     }
-    
+
     .sticky .main-nav li a:link,
     .sticky .main-nav li a:visited { padding: 10px 0px; }
     .sticky .main-nav { margin-top: 10px; }
     .sticky .mobile-nav-icon { margin-top: 10px; }
     .sticky .mobile-nav-icon i { color: #555; }
-    
-    
+
+
     .long-copy { width: 100%; margin-left: 0; }
-    
+
     h1 { font-size: 180%; }
     h1 { font-size: 150%; }
-    
+
     .works-step { margin-bottom: 20px; }
     .works-step:last-of-type { margin-bottom: 20px; }
-    
+
     .works-step div {
         height: 40px;
         width: 40px;
         padding: 4px;
         margin-right: 15px;
     }
-    
+
     .steps-box:first-child { text-align: center; }
     .app-screen { width: 40%; }
-    
+
     .contact-form { width: 100%; }
     .contact-form .row { margin-bottom: 10px!important ; }
 }
